Finished plots for refractive index

--- a/Myon/Protokoll/LM_Protokoll_ausw.tex
+++ b/Myon/Protokoll/LM_Protokoll_ausw.tex
@@ -87,7 +87,7 @@
 		      			\label{fig:LDpoisson}
 		\end{figure}
    \subsection{Normalverteilung}	
-   Da die Poissonverteilung im Grenzfall $\lambda_K \gg 1$ in die \textit{Normalverteilung} übergehen sollte, werden nun jeweils benachbarte Kanäle zu einem zusammengefasst, sodass die Zählraten hinreichend groß sind. Nutzt man den arithmetischen Mittelwert der beiden Kanalmitten als neue Lebensdauer ergibt sich eine leicht kompliziertere Kanalkalibrierung:
+   Da die Poissonverteilung im Grenzfall $\lambda_K \gg 1$ in die \textit{Normalverteilung} übergehen sollte, werden nun jeweils benachbarte Kanäle zu einem zusammengefasst, sodass die Zählraten hinreichend groß sind. Es wird sich zwar herausstellen, dass dies nicht notwendig ist, da die Zählraten in allen Kanälen größer gleich 10 sind. Da aber im Vorhinein nicht klar war, dass diese vergleichsweise geringen Zählraten ausreichen, um der Normalverteilung zu genügen, ist im Folgenden ein Vergleich zwischen der Methode mit und ohne zusammengeführten Kanälen aufgeführt. Nutzt man den arithmetischen Mittelwert der beiden Kanalmitten als neue Lebensdauer ergibt sich eine leicht kompliziertere Kanalkalibrierung:
    		\begin{equation}
    				\tau_K = K \cdot \Delta t - \frac{1}{48}\ \unit{\mu s}	
    		\end{equation} 
