--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -1,7 +1,7 @@
 \section{Einführung}
 
 	\subsection{Entstehung von Myonen}
-	\textit{Myonen} $\mu{\pm}$ lassen sich im heute gängigen Standardmodell der Teilchenphysik zur zweiten Generation der elektrisch geladenen Leptonen zuordnen. Sie sind mit $m_\mu = 105,658\ \unit{MeV = 206,768\ m_e}$\cite{pdg} die schweren Pendants zum Elektron.\\
+	\textit{Myonen} $\mu^{\pm}$ lassen sich im Standardmodell der Teilchenphysik zur zweiten Generation der elektrisch geladenen Leptonen zuordnen. Sie sind mit $m_\mu = 105,658\ \unit{MeV = 206,768\ m_e}$\cite{pdg} die schweren Pendants zum Elektron.\\
 	Im folgenden Versuch werden Myonen aus der kosmischen Höhenstrahlung, welche zu 85\% aus hochenergetischen Protonen besteht, untersucht. Bei Zusammenstößen dieser Protonen mit Atomkernen in der Erdatmosphäre entstehen die geladenen $\pi^\pm$-Mesonen Reaktionen niedrigster Ordnung sind:
 		\begin{align*}
 			&p + p \longrightarrow p + n + \pi^+\\
@@ -9,8 +9,8 @@
 		\end{align*}
 	Diese Mesonen zerfallen nach etwa $2,6\cdot10^{-8}\ \unit{s}$ über die schwache Wechselwirkung. Der mit einem Anteil von 99,988\% dominierende Zerfallskanal endet in einem Myon und einem zugehörigen Neutrino und kann mit folgender Zerfallsgleichung und dem Feynmandiagramm in Abbildung \ref{fig:pionzerfall} beschrieben werden:
 		\begin{align*}
-			&\pi^+ \longrightarrow \mu^+ + \nu_\mu\\
-			&\pi^- \longrightarrow \mu^- + \bar{\nu}_\mu\\
+			&\pi^+ \longrightarrow \mu^+ + \nu_\mu \text{,}\\
+			&\pi^- \longrightarrow \mu^- + \bar{\nu}_\mu \text{.}\\
 		\end{align*}
 		\begin{figure}[hp]
 					\centering
@@ -20,7 +20,7 @@
 		\end{figure}
 		
 	\subsection{Zerfall von Myonen}
-	Da das Myon ein sehr schweres Teilchen ist, zerfällt es nach einer sehr kurzen Zeit von:\cite{PA}\\
+	Da das Myon ein sehr schweres Teilchen ist, zerfällt es nach einer sehr kurzen Zeit von \cite{PA}:\\
 		\begin{equation} \label{eq:lit}
 			\tau_\mu = (2,19703 \pm 0,00004)\ \unit{\mu s}
 		\end{equation}
@@ -42,7 +42,7 @@
 	Auch wenn die in Gleichung (\ref{eq:lit}) angegebene Lebensdauer sehr kurz erscheint, ist der Myonenfluss auf Meereshöhe mit $170\ \unit{Myonen/(m^2s)}$ sehr hoch. Dies lässt sich dadurch erklären, dass die oben angegebene Lebensdauer im Laborsystem der Beobachter auf der Erde angegeben ist. Da sich Myonen mit relativistischen Energien bewegen, besitzen sie in ihrem Ruhesystem eine \textit{zeitdilatierte Lebensdauer}, welche ausreicht, um an die Erdoberfläche zu gelangen. Selbst in der theoretischen Vorhersage der Lebensdauern mit Hilfe von \textit{Übergangsmatrixelementen} $\Gamma_{fi} = 1/\tau_{fi}$ (d.h. bei Übergang von Zustand $\ket{i}$ in $\ket{f}$) treten Terme auf, die nicht lorentzinvariant sind.
 	
 	\subsection{$\mu^-$-Einfang}
-	Im Falle der negativ elektrisch geladenen Myonen $\mu^-$ existiert in Materie allerdings ein weiterer 'Zerfallskanal', der sogenannte $\mu^-$-Einfang, bei dem ein einfallendes Myon im Coulombfeld eines Atoms eingefangen wird, bis in den Grundzustand vordringt und anschließend vom Kern absorbiert wird. Dabei findet folgende Kernumwandlung(Abbildung \ref{fig:myoneinfang}) statt:
+	Im Falle der negativ elektrisch geladenen Myonen $\mu^-$ existiert in Materie allerdings ein weiterer 'Zerfallskanal', der sogenannte $\mu^-$-Einfang, bei dem ein einfallendes Myon im Coulombfeld eines Atoms eingefangen wird bis es den Grundzustand erreicht und anschließend vom Kern absorbiert wird. Dabei findet folgende Kernumwandlung(Abbildung \ref{fig:myoneinfang}) statt:
 		\begin{equation*}
 			\mu^- + p \longrightarrow  \nu_\mu + n 
 		\end{equation*}
