--- a/Myon/Protokoll/LM_Protokoll_main.tex
+++ b/Myon/Protokoll/LM_Protokoll_main.tex
@@ -17,6 +17,20 @@
 \usepackage{hyperref}
 \usepackage{cleveref}
 \usepackage{braket}
+\usepackage[procnames]{listings} %quellcode einbinden
+ \usepackage{color}	% syntaxhighlighting
+ \definecolor{keywords}{RGB}{255,0,90}
+ \definecolor{comments}{RGB}{0,0,113}
+ \definecolor{red}{RGB}{160,0,0}
+ \definecolor{green}{RGB}{0,150,0}
+ \lstset{language=Python, 
+         basicstyle=\ttfamily\small, 
+         keywordstyle=\color{keywords},
+         commentstyle=\color{comments},
+         stringstyle=\color{red},
+         showstringspaces=false,
+         identifierstyle=\color{green},
+         procnamekeys={def,class}}
 
 \newcommand{\minipanf}{\begin{minipage}{\linewidth}}
 \newcommand{\minipend}{\end{minipage}}
