--- a/SO/Protokoll/SO_Protokoll_intro.tex
+++ b/SO/Protokoll/SO_Protokoll_intro.tex
@@ -1,2 +1,4 @@
 \section{Einführung und Grundlagen}
-Bevor der eigentliche Versuch besprochen wird, sollen noch einige Grundlagen erörtert werden.
+	Bevor der eigentliche Versuch besprochen wird, sollen noch einige Grundlagen erörtert werden.
+\subsection{Reflexion und Transmission an Grenzflächen}
+		
