--- a/SO/Protokoll/SO_Protokoll_experiment.tex
+++ b/SO/Protokoll/SO_Protokoll_experiment.tex
@@ -1,1 +1,6 @@
 \section{Versuchsdurchführung}
+	\subsection{Messung spektraler Transparenz und Reflexion} \label{sec:shimadzu}
+	%TODO: Kurze Beschreibung der Durchführung am SHIMADZU3100 (da reichen ein paar wenige Sätze)
+	
+	\subsection{Lumineszenzspektrometrie}
+	%TODO Kurze Beschreibung der Messung am FLOUROMAX. Besonders  Bragg-Bedingung am Eingangsfilter diskutieren.
