--- a/EBIS/Protokoll/EBIS_Protokoll_literatur.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_literatur.tex
@@ -1,1 +1,3 @@
-\section{Quellenverzeichnis}
+\begin{thebibliography}{99}
+\bibitem [01] {PA} Dr. Günter Zschornack. \textit{Elektronenstrahlquelle EBIS-A}. Großröhrsdorf, zuletzt geöffnet: 03.03.2016
+\end{thebibliography}
