--- a/EBIS/Protokoll/EBIS_Protokoll_intro.tex
+++ b/EBIS/Protokoll/EBIS_Protokoll_intro.tex
@@ -1,5 +1,5 @@
 \section{Einführung und Grundlagen}
-	\subsection{Elektrisch geladene Teilchen in einem homogenen Magnetfeld}
+	\subsection{Elektrisch geladene Teilchen in einem homogenen Mag\-net\-feld}
 		Um später die verschiedenen elektrisch geladenen Argonionen voneinander trennen zu können, ist im Niederenergiestrahlkanal ein 90°-Dipol-Magnet verbaut, der ein homogones Magnetfeld erzeugt und die Ionen auf eine Kreisbahn zwingt. Im Folgenden soll die Dynamik dieser Bewegung erörtert werden.\\
 		Betrachte dafür ein elektrisch geladenes Teilchen mit Ladung $Q = q\cdot e$ und Masse $m$. Es wurde vorher von einem elektrischen Feld mit einer Spannung $U_B$ auf die Geschwindigkeit $\vec{v}(t=0)=v\vec{e}_x$ beschleunigt und befinde sich anschließend in einem homogenen Magnetfeld $\vec{B} = B \vec{e}_z$. In diesem erfährt es die \textit{Lorentzkraft}:
 		\begin{equation}\label{eq:lorentz}
